# finance-tracker

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/config/: mongodb.py  setting.py
app/domains/auth/: jwt_service.py  middleware.py  routes.py
app/domains/otp/: otp_service.py  routes.py  schemas.py
app/domains/transactions/: llm_service.py  models.py  ocr_service.py  routes.py  schemas.py  services.py
app/domains/users/: service.py
app/shared/: azure_ocr_service.py  cloudinary_service.py  whatsapp_service.py
